workflow structure updates
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -10,6 +10,10 @@ jobs:
     uses: ./.github/workflows/ci-js.yml
   CodeQL:
     uses: ./.github/workflows/codeql.yml
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
   dependency-review:
     uses: ./.github/workflows/dependency-review.yml
   build-docker:
