workflow structure updates
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -12,12 +12,13 @@ jobs:
     uses: ./.github/workflows/codeql.yml
     permissions:
       actions: read
-      contents: read
       security-events: write
   dependency-review:
     uses: ./.github/workflows/dependency-review.yml
   build-docker:
     uses: ./.github/workflows/docker.yml
+    permissions:
+      packages: write
     needs:
       - ci-javascript
       - CodeQL
