workflow structure updates
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -12,6 +12,7 @@ jobs:
     uses: ./.github/workflows/codeql.yml
     permissions:
       actions: read
+      contents: read
       security-events: write
   dependency-review:
     uses: ./.github/workflows/dependency-review.yml
