--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -19,6 +19,7 @@ jobs:
   build-docker:
     uses: ./.github/workflows/docker.yml
     permissions:
+      contents: read
       packages: write
     needs:
       - ci-javascript
