--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -15,13 +15,9 @@ jobs:
       contents: read
       security-events: write
   dependency-review:
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/dependency-review.yml
     permissions:
       contents: read
-    steps:
-      - uses: actions/checkout@v3
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@v2
   build-docker:
     uses: ./.github/workflows/docker.yml
     permissions:
